feat : implement api data fetch on dashborad page

--- a/Client/admin/dashboard.html
+++ b/Client/admin/dashboard.html
@@ -36,7 +36,7 @@
     <section class="mx-7 max-xl:mx-2">
         <div class="container h-[100%]">
             <div class="h-[80vh] border-[1px] border-gray-400 mt-12 max-xl:mt-3  rounded-md py-3 ">
-                <div class="pl-8 max-xl:px-3 pb-4 border-b-[1px] flex justify-between items-center ">
+                <div class="px-8 max-xl:px-3 pb-4 border-b-[1px] flex justify-between items-center ">
                     <h2 class="text-xl text-white " border-gray-400>Players</h2>
 
                     <div onclick="OpenFormPanel(1 ,-1)" class="cursor-pointer text-gray-50 rounded-md bg-[#6158CA] px-3 py-2 max-xl:py-1 flex justify-center items-center gap-2">
