--- a/Client/admin/dashboard.html
+++ b/Client/admin/dashboard.html
@@ -9,7 +9,6 @@
     https://cdn.jsdelivr.net/npm/tom-select@2.4.1/dist/css/tom-select.default.min.css
     " rel="stylesheet">
     <link rel="stylesheet" href="../Css/input.css">
-
 </head>
 <body>
     <header class="text-sm border-b-[1px] border-gray-600">
@@ -39,7 +38,7 @@
                             <span class="text-white">or</span>
                             <input class="my-2 text-gray-50 max-xl:text-white"
                             accept="image/png, image/jpg, image/jpeg"
-                            type="file" id="fileInput" multiple />
+                            type="file" id="fileInputClub" multiple />
                         </div>
                         <h6 class="mt-1 text-gray-300 max-xl:text-white text-[0.6rem]">Supports : JPEG , JPG, PNG</h6>
     
@@ -50,18 +49,19 @@
                         <input id="txtclubpanel" class="w-full px-2 py-1 bg-transparent border-[1px] border-gray-400 rounded-md" type="text" />
                     </div>
                     <div class="grid grid-cols-2 gap-4 relative ">
-                        <button type="submit" onclick="Close" 
+                        <button id="btnUpdateClub" type="submit" onclick="UpdateClub(event)" 
                                  class="py-1 bg-blue-500" >
                              <i class="fa-solid fa-rotate-right"></i>
-                        </button>
+                            
+                            </button>
                         <button type="submit" onclick="" 
                            class="py-1 bg-red-600" >
                               <i class="fa-solid fa-xmark"></i>
                         </button>
-                        <button type="submit" onclick="ClosePanelClub(event)" 
-                        class="absolute -bottom-16 left-0 right-0" >
-                           <i  class="fa-solid fa-chevron-up p-3  bg-[#2D2C6D] rounded-[100%] "></i>
-                     </button>
+                        <div
+                        class="absolute -bottom-16 left-[45%] right-0" >
+                           <i onclick="ClosePanelClub(event)"   class="fa-solid fa-chevron-up p-3  bg-[#2D2C6D] rounded-[100%] "></i>
+                        </div>
                     </div>
                 </div>
             </form>
