--- a/Client/builder.html
+++ b/Client/builder.html
@@ -9,7 +9,7 @@
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 
-<body>
+<body class="dark">
     <header class="fixed text-sm border-b-[1px] border-gray-600">
         <div class="container  grid grid-cols-[auto,1fr,auto] max-md:gap-2 max-md:grid-cols-1 max-md:justify-center items-center  py-4 px-3 text-gray-200">
             <h2 class="text-[#6158CA] text-center">AmineFC</h2>
@@ -17,14 +17,14 @@
                 <li><a href="./">Home</a></li>
                 <li><a href="./builder.html">Build</a></li>
             </ul>
-            <div class="flex items-center gap-5 max-md:hidden">
-                <button class="text-[#6158CA]  bg-white rounded-md px-3 py-1">Login</button>
-                <button class="bg-[#6158CA]  rounded-md px-3 py-1">Sign Up</button>
+            <div class="flex items-center gap-5 max-xl:hidden">
+                <button onclick="ModeAdmin()" class="bg-[#6158CA]  rounded-md px-3 py-1">Dashboard</button>
                 <div
                     class="bg-[#262244] rounded-full border-[1px] border-[#6158CA] flex justify-center items-center h-8 w-8">
                     <i class="fa-regular fa-moon"></i>
                 </div>
             </div>
+           
         </div>
     </header>
     <div class="lc"></div>
